# CDuckling

./: .travis.yml  CDuckling.cabal  LICENSE  README.md  cabal.project  duckling.h
csrc/: duckling.c
src/: CDuckling.hs
src/Duckling/Data/: TimeZone.hs
