name:               CDuckling
version:            0.1.0
cabal-version:      >=2.00
build-type:         Simple

foreign-library duckling
  type:             native-shared
  hs-source-dirs:   src
  c-sources:        csrc/duckling.c
  build-depends:      duckling               == 0.1.6.1
                    , base                   >= 4.8.2 && < 5.0
                    , text                   >= 1.2.2.1 && < 1.3
                    , time                   >= 1.5.0.1 && < 2
                    , timezone-series	     >= 0.1.5.1 && < 0.2
                    , bytestring             >= 0.10.6.0 && < 0.11
                    , unordered-containers   >= 0.2.7.2 && < 0.3
                    , dependent-sum          >= 0.3.2.2 && < 0.5
                    , aeson                  >= 0.11.3.0 && < 1.5
                    , directory              >= 1.2.2.0 && < 1.4
                    , filepath               >= 1.4.0.0 && < 1.5
                    , timezone-olson         >= 0.1.7 && < 0.2
                    , extra                  >= 1.4.10 && < 1.7
  other-modules:      CDuckling
                    , Duckling.Data.TimeZone
  default-language: Haskell2010
  install-includes: duckling.h

